Few Content Added

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -34,7 +34,7 @@
                     <div class='row'>
                         <div class="accordion-container">
 
-                            <div class="title-block col-sm-6 ">
+                            <div class="title-block col-sm-9 ">
                             <h4 class="h4">Why Us ?</h4>
                             <div class="sub-title-type-2">
                                 <div class="accordion-item accordion-style-2">
@@ -77,18 +77,18 @@
                                 </div>
 
 
-                                <div class="title-block col-sm-6 ">
+                                <div class="title-block col-sm-3 ">
                             <h4 class="h4">What We Do ?</h4>
                             <div class="sub-title-type-2">
                                 <ul class="list list-type-4">
 
-                                <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
-                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
-                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
-                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li> <li>
-                                <i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
-                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
-
+                                <li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/web-designing/">Web Designing</a></li>
+                                 <li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/web-development/">Web Development</a></li>
+                                 <li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/e-commerce/">E Commerce</a></li>
+                                 <li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/software-development/">Software Development</a></li> <li>
+                                <i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/seo-services/">SEO Services</a></li>
+                                 <li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/support-and-maintanence/">Support &amp; Maintanance</a></li>
+<li><i class="fa fa-map-signs"></i><a style='color:#dc3c4b;' href="/print-media/">Print Media</a></li>
                             </ul></div>
                         </div>
 
@@ -109,29 +109,26 @@
                             <div class="swiper-slide text-center">
                                 <img class="author-ava" src="/static/img/ava.png" alt="">
                                 <blockquote class="testimonials ">
-                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto"
+                                    Digitech Partner is an software development company strategically founded to be versatile, dynamic and responsive to the today's challenging needs of our clients. We have always operated on the premise that all future sales are linked directly to how you treat your existing customers.
+                                    With that said, we are very proud of our software and support team.
                                 </blockquote>
-                                <cite class="author">Albert Dowson.  Company director</cite>
+                                <cite class="author">Ashish.  Company director</cite>
                             </div>
                             <div class="swiper-slide text-center">
                                 <img class="author-ava" src="/static/img/ava.png" alt="">
                                 <blockquote class="testimonials ">
-                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto"
+                                    We gladly offer all prospective customer a list of names and phone numbers of existing customers in their area who have agreed to
+                                    provide you unbiased information concerning our past performance.
+                                    We are proud of what we do, and we strive to meet or exceed the customers' expectations.
                                 </blockquote>
-                                <cite class="author">Albert Dowson.  Company director</cite>
+                                <cite class="author">Bharat Kotwani.  Company director</cite>
                             </div>
                             <div class="swiper-slide text-center">
                                 <img class="author-ava" src="/static/img/ava.png" alt="">
                                 <blockquote class="testimonials ">
-                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architect"
+                                    We would like to thank our clients and business partners for rewarding us with continued trust and confidence.
                                 </blockquote>
-                                <cite class="author">Albert Dowson.  Company director</cite>
+                                <cite class="author">Aditya Kumar.  Company director</cite>
                             </div>
                         </div>
                         <div class="pagination"></div>
