--- a/templates/index.html
+++ b/templates/index.html
@@ -87,40 +87,52 @@
                 <div class="row row-services">
                     <div class="col-md-4 col-sm-6  icon-style icon-style-2">
                         <span class="icon-tools"></span>
-                        <h3 class="middle-title ">Web design</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">Web Designing</h3>
+                        <p>Web designing is the process of creating websites. It encompasses several different aspects, including webpage layout, content production, and graphic design.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 icon-style icon-style-2">
                         <span class="icon-layers"></span>
-                        <h3 class="middle-title ">development</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">Web Development</h3>
+                        <p>Web development is the back-end of the website, the programming and
+                            interactions on the page.we focuses on how a site works and how the customers get things done on it.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 icon-style icon-style-2">
                         <span class=" icon-circle-compass"></span>
-                        <h3 class="middle-title ">development</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">E Commerce</h3>
+                        <p>Electronic commerce or ecommerce is a term for any type of business, or commercial transaction, that involves the transfer of information across the Internet
+                            .</p>
                     </div>
                     <div class="col-md-4 col-sm-6 icon-style icon-style-2">
                         <span class="icon-puzzle"></span>
-                        <h3 class="middle-title ">programming</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">Software Development</h3>
+                        <p>Software development is the process of computer programming, documenting, testing, and bug fixing involved in creating and maintaining applications
+                            and frameworks involved in a software release life cycle and resulting in a software product.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 icon-style icon-style-2">
                         <span class=" icon-camera"></span>
-                        <h3 class="middle-title ">photography</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">SEO Services</h3>
+                        <p>We develop, extend and deliver out of the box Search Engine Optimization solutions. Our Search Engine Optimization processes as well as
+                            website development and IT enabled solutions are designed in accordance with the SEO guidelines by Google.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 icon-style icon-style-2">
                         <span class="icon-telescope"></span>
-                        <h3 class="middle-title ">support</h3>
-                        <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                            quae ab illo.</p>
+                        <h3 class="middle-title ">Support &amp; Maintanance</h3>
+                        <p>Applications Support and Maintenance (ASM) represents a disproportionately large chunk of IT spend, for very little value in return. Throw into the mix that fewer than 20% of organizations have an application services strategy,
+                            leading to overspending and underperformance, and ASM suddenly becomes a big budgetary blind spot.</p>
                     </div>
+                    <div class="col-md-4 col-sm-6 icon-style icon-style-2">
+                        <span class="icon-camera"></span>
+                        <h3 class="middle-title ">Print Media</h3>
+                        <p> We Digitech Partner are well aware of this requirements of our clients and therefore we are offering a
+                            wide range of graphic design services that includes logo design, corporate identity design, corporate logo design, letterhead design, business card design, envelop design, brochure design etc at an affordable rate.
+                        </p>
+                    </div>
+                    <div class="col-md-8 col-sm-10">
+
+                        <iframe style="width:100%;height:250px;" src="https://www.youtube.com/embed/uKoYxFduzaQ" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+
                 </div>
             </div>
         </div>
