--- a/templates/master.html
+++ b/templates/master.html
@@ -80,7 +80,7 @@
 
                                 </li>
                                 <li><a href="/about-us/">About Us</a></li>
-                                <li class="sub-menu-parent"><a href="#">Services</a>
+                                <li class="sub-menu-parent"><a href="/services">Services</a>
                                     <span class="fa open-sb-menu fa-chevron-down"></span>
                                     <ul class="sub-menu sb"><li class="sub-menu-parent"><a href="/web-designing/">Web Designing </a>
 
@@ -89,7 +89,7 @@
                                         <li><a href="/software-development/">Software Development</a></li>
                                         <li><a href="/seo-services/">SEO Services</a></li>
                                         <li><a href="/support-and-maintanence/">Support &amp; Maintenance</a></li>
-                                        <li><a href="print-media/">Print Media</a>
+                                        <li><a href="/print-media/">Print Media</a>
                                             </li>
 
                                     </ul>
