--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -61,13 +61,14 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <div class="project-det">
-                            <h3>project details</h3>
+                            <h3>THEWEDDINGSHOPP</h3>
                             <ul class="detail-list">
-                                <li>Client: <span>Albert Dowson</span></li>
-                                <li>Date:  <span>10 may, 2015</span></li>
-                                <li>link: <span><a href="#">www.themeforest.net</a></span></li>
+                                <li>Client: <span>Sudhir Dagar</span></li>
+                                <li>Date:  <span>18 August, 2015</span></li>
+                                <li>link: <span><a href="#">www.theweddingshopp.com</a></span></li>
                             </ul>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemuia voluptas sit aspernatur aut odit. </p>
+                            <p>Theweddingshopp.com is part of Cognitive Solutions Group which provides an
+                                exclusive marketplace, a one stop shop for the users who can find all type of wedding vendors at one place.</p>
                         </div>
                     </div>
                 </div><hr />
@@ -96,13 +97,17 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <div class="project-det">
-                            <h3>project details</h3>
+                            <h3>ARA HEALTH SERVICES</h3>
                             <ul class="detail-list">
-                                <li>Client: <span>Albert Dowson</span></li>
-                                <li>Date:  <span>10 may, 2015</span></li>
-                                <li>link: <span><a href="#">www.themeforest.net</a></span></li>
+                                <li>Client: <span>Ashish Kumar Jha</span></li>
+                                <li>Date:  <span>December, 2015</span></li>
+                                <li>link: <span><a href="#">www.aprahealthservices.org.in</a></span></li>
                             </ul>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemuia voluptas sit aspernatur aut odit. </p>
+                            <p>Apra Health Services designed for Preventive Health Check plans to ensure that people in general can also access Health Care at affordable price.
+                                Whether supporting the needs of an individual or a Family,
+                                Apra Health Services has a complete Preventive Health Check Plans offering with a consistent experience and outcome For a Healthy tomorrow.
+
+                            </p>
                         </div>
                     </div>
                 </div><hr />
@@ -131,13 +136,15 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <div class="project-det">
-                            <h3>project details</h3>
+                            <h3>IMAKEACHOICE</h3>
                             <ul class="detail-list">
-                                <li>Client: <span>Albert Dowson</span></li>
-                                <li>Date:  <span>10 may, 2015</span></li>
-                                <li>link: <span><a href="#">www.themeforest.net</a></span></li>
+                                <li>Client: <span>IMAKEACHOICE</span></li>
+                                <li>Date:  <span>October, 2014</span></li>
+                                <li>link: <span><a href="#">www.imakeachoice.com</a></span></li>
                             </ul>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemuia voluptas sit aspernatur aut odit. </p>
+                            <p>
+                                Imakeachoice-Paintings,Sculptures,Oil Paintings, Canvas..
+                            </p>
                         </div>
                     </div>
                 </div><hr />
@@ -166,51 +173,24 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <div class="project-det">
-                            <h3>project details</h3>
+                            <h3>INVESTWIZZ</h3>
                             <ul class="detail-list">
-                                <li>Client: <span>Albert Dowson</span></li>
-                                <li>Date:  <span>10 may, 2015</span></li>
-                                <li>link: <span><a href="#">www.themeforest.net</a></span></li>
+                                <li>Client: <span>Sandeep</span></li>
+                                <li>Date:  <span>October, 2014</span></li>
+                                <li>link: <span><a href="#">www.investwizz.com</a></span></li>
                             </ul>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemuia voluptas sit aspernatur aut odit. </p>
-                        </div>
-                    </div>
-                </div><hr />
-                <div class="row">
-                    <div class="col-sm-8 col-md-8">
-                        <div class="swiper-container portfolio-slider swiper-swiper-unique-id-0 initialized" data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="1" id="swiper-unique-id-0">
-                            <div class="swiper-wrapper " style="width: 3750px; transform: translate3d(-750px, 0px, 0px); transition-duration: 0s; height: 499px;"><div class="swiper-slide swiper-slide-duplicate" style="width: 750px; height: 499px;">
-                                    <img class="img-responsive" src="/static/img/full-p-3.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide swiper-slide-visible swiper-slide-active" style="width: 750px; height: 499px;">
-                                    <img class="img-responsive" src="/static/img/full-p-1.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide" style="width: 750px; height: 499px;">
-                                    <img class="img-responsive" src="/static/img/full-p-2.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide" style="width: 750px; height: 499px;">
-                                    <img class="img-responsive" src="/static/img/full-p-3.jpg" alt="">
-                                </div>
-                            <div class="swiper-slide swiper-slide-duplicate" style="width: 750px; height: 499px;">
-                                    <img class="img-responsive" src="img/full-p-1.jpg" alt="">
-                                </div></div>
-                            <div class="pagination pagination-bottom pagination-swiper-unique-id-0"><span class="swiper-pagination-switch swiper-visible-switch swiper-active-switch"></span><span class="swiper-pagination-switch"></span><span class="swiper-pagination-switch"></span></div>
-                            <div class="sl-post-prev  swiper-arrow-left"><i class="fa fa-angle-left"></i></div>
-                            <div class="sl-post-next  swiper-arrow-right"><i class="fa fa-angle-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="project-det">
-                            <h3>project details</h3>
-                            <ul class="detail-list">
-                                <li>Client: <span>Albert Dowson</span></li>
-                                <li>Date:  <span>10 may, 2015</span></li>
-                                <li>link: <span><a href="#">www.themeforest.net</a></span></li>
-                            </ul>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemuia voluptas sit aspernatur aut odit. </p>
+                            <p>Stock, Securities, Financial App, India, Capital, Mutual Fund, NSE, BSE, National Stock exchange,
+                                Bombay Stock exchange, Investment, Value investment, Stock Research, Alpha seeker,  India Stocks,
+                                India stock research, Finance, India Finance, India Financial blogs, Key economic trends,
+                                India Funds Portfolio analysis,  Graham, Buffett, Fundamental analysis, Value seeker, Energy sector analysis,
+                                Financial sector analysis, Technology sector analysis, Earnings
+                                transcript, Stock earnings, Earnings update Share earnings release date, India Stock watch list,India stock notifications
+
+                            </p>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
