--- a/templates/services.html
+++ b/templates/services.html
@@ -34,17 +34,18 @@
                                         <span class="icon-tools"></span>
                                         <h3>Web Designing</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Web design is the process of creating websites. It encompasses several different aspects
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/web-designing/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            Web design is the process of creating websites. It encompasses several different aspects, including webpage layout, content production, and graphic design. While the terms web design and web development are often used interchangeably,
+                                            web design is technically a subset of the broader category of web development
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/web-designing/">more</a><br>
                                     </div>
                                 </div>
                             </div>
@@ -57,17 +58,18 @@
                                         <span class="icon-gears"></span>
                                         <h3>Web Development</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Web development is the back-end of the website, the programming and interactions on the page.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/web-development/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            Web development can range from developing the simplest static single page of plain text to the most
+                                            complex web-based internet applications, electronic businesses, or social network services.
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/web-development/">more</a><br>
                                     </div>
                                 </div>
                             </div>
@@ -80,17 +82,20 @@
                                         <span class="icon-telescope"></span>
                                         <h3>E Commerce</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Electronic commerce or ecommerce is a term for any type of business,
+                                            or commercial transaction, that involves the transfer of information across the Internet.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/e-commerce/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            E -commerce is conducted using a variety of applications, such as email fax, online catalogs and shopping carts,
+                                            Electronic Data Interchange (EDI), FileTransfer Protocol, and Web services.
+
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/e-commerce/">more</a><br>
                                     </div>
                                 </div>
                             </div>
@@ -105,17 +110,19 @@
                                         <span class="icon-tools"></span>
                                         <h3>Software Development</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Software development is the process of computer programming, documenting, testing.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/software-development/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            Software development is the process of computer programming, documenting, testing, and bug fixing involved in creating and maintaining applications
+                            and frameworks involved in a software release life cycle and resulting in a software product.
+
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/software-development/">more</a><br>
                                     </div>
                                 </div>
                             </div>
@@ -128,17 +135,20 @@
                                         <span class="icon-gears"></span>
                                         <h3>SEO Services</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            SEO stands for "search engine optimization."
+                                            Process of getting traffic from the "free," "organic," "editorial" or "natural" search results on search engines.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/seo-services/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            We develop, extend and deliver out of the box Search Engine Optimization solutions. Our Search Engine Optimization processes as well as
+                            website development and IT enabled solutions are designed in accordance with the SEO guidelines by Google.
+
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/seo-services/">more</a><br>
                                     </div>
                                 </div>
                             </div>
@@ -151,16 +161,17 @@
                                         <span class="icon-telescope"></span>
                                         <h3>Print Media</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Wide range of graphic design and development services
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
                                         <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <p>We Digitech Partner are well aware of this requirements of our clients and therefore we are offering a
+                            wide range of graphic design services that includes logo design, corporate identity design, corporate logo design, letterhead design, business card design, envelop design, brochure design etc at an affordable rate.
+
+                                        </p>
                                         <a class="button button-type-2-md btn-white" href="#">more</a><br>
                                     </div>
                                 </div>
@@ -176,21 +187,28 @@
                                         <span class="icon-telescope"></span>
                                         <h3>Support &amp; Maintanance</h3>
                                         <div class="s-banner-text">
-                                            Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantium
+                                            Process of maintaining and ehancing the existing functionality.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="s-banner-more">
                                     <div class="s-banner-more-center">
-                                        <a href="#"> <i class="fa fa-bars"></i></a>
-                                        <p>Omnis iste natus doxes sit voluptatem accusa
-                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
-                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                        <a href="/support-and-maintanance/"> <i class="fa fa-bars"></i></a>
+                                        <p>
+                                            Applications Support and Maintenance (ASM) represents a disproportionately large chunk of IT spend, for very little value in return. Throw into the mix that fewer than 20% of organizations have an application services strategy,
+                            leading to overspending and underperformance, and ASM suddenly becomes a big budgetary blind spot.
+
+                                        </p>
+                                        <a class="button button-type-2-md btn-white" href="/support-and-maintanance/">more</a><br>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-sm-12 col-md-8">
+                            <iframe style='width:100%;height:315px;' src="https://www.youtube.com/embed/q_bDgpAwam4" frameborder="0" allowfullscreen></iframe>
+                        </div>
+
                     </div>
                 </div>
             </section>
