--- a/templates/web-designing.html
+++ b/templates/web-designing.html
@@ -11,12 +11,12 @@
             <div class="container">
                 <div class="title-header">
                     <h1>Web Designing</h1>
-                    <h6 class="header-sub-title"><a href="/enquiry" >Request a quote</a> for website designing services.</h6>
+                    <h6 class="header-sub-title"><a href="/contact-us" >Request a quote</a> for website designing services.</h6>
                 </div>
             </div>
             <div class="scroll-to mouse"><span></span></div>
             <div class="clip">
-                <div class="bg bg-bg" style="background-image:url(img/h-bg-2.jpg)"></div>
+                <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-10.jpg)"></div>
             </div>
             <div class="overlay"></div>
         </div>
